<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailUser">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.079"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.054"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_location_detail_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:text="@string/location"
                    android:textColor="@color/primary_light"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_location_on_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_company" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:text="@string/company"
                    android:textColor="@color/primary_light"
                    android:textSize="16sp"
                    app:drawableLeftCompat="@drawable/ic_baseline_work_outline_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name_detail_user" />

                <TextView
                    android:id="@+id/tv_name_detail_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:drawablePadding="8dp"
                    android:text="@string/name"
                    android:textColor="@color/primary_light"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/ic_baseline_account_circle_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    tools:text="@string/name" />

                <TextView
                    android:id="@+id/tv_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="64dp"
                    android:text="@string/_0"
                    android:textColor="@color/primary_light"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/tv_following"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/tv_following" />

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/_0"
                    android:textColor="@color/primary_light"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <TextView
                    android:id="@+id/tv_repo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/_0"
                    android:textColor="@color/primary_light"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_following"
                    app:layout_constraintTop_toTopOf="@+id/tv_following" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:text="@string/followers"
                    android:textColor="@color/primary_light"
                    app:layout_constraintEnd_toEndOf="@+id/tv_follower"
                    app:layout_constraintStart_toStartOf="@+id/tv_follower"
                    app:layout_constraintTop_toBottomOf="@+id/tv_follower" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/primary_light"
                    android:text="@string/following"
                    app:layout_constraintEnd_toEndOf="@+id/tv_following"
                    app:layout_constraintStart_toStartOf="@+id/tv_following"
                    app:layout_constraintTop_toBottomOf="@+id/tv_following" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/repository"
                    android:textColor="@color/primary_light"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/tv_repo"
                    app:layout_constraintStart_toStartOf="@+id/tv_repo"
                    app:layout_constraintTop_toBottomOf="@+id/tv_repo" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="300dp" />


                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideline"
                    app:layout_constraintVertical_bias="0.014"
                    app:tabIndicatorColor="@color/primary_light"
                    app:tabTextColor="@color/primary_light"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tabs" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="730dp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="190dp"
                    android:layout_marginEnd="190dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.529"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.499" />

                <ToggleButton
                    android:id="@+id/favoriteToggle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textOff=""
                    android:textOn=""
                    android:background="@drawable/favorite_btn"
                    android:focusableInTouchMode="false"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_location_detail_user"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.897"
                    app:layout_constraintStart_toEndOf="@+id/tv_location_detail_user"
                    app:layout_constraintTop_toTopOf="@+id/tv_location_detail_user" />


        </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>